Fixes pricing cards on small screens.

--- a/themes/meghna-hugo/assets/css/style.css
+++ b/themes/meghna-hugo/assets/css/style.css
@@ -1015,7 +1015,15 @@ a .navbar-brand .logo {
 }
 
 
-.pricing-paragraph {
+ .pricing-paragraph {
+  display: inline-block;
+  width: 100%;
+  padding: 0 15px;
+  margin: 50px 0px;
+  border-bottom: 2px solid rgba(236, 239, 241, 0.07);
+}
+
+.hood-paragraph {
   display: inline-block;
   width: 100%;
   margin: 50px 0px;
